# atmodeller

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  cspell.json  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: coverage.yml  publish.yaml  python-package.yml  run_tests.yml
atmodeller/: __init__.py  _mytypes.py  classes.py  constants.py  constraints.py  constraints_old.py  containers.py  core.py  dummy.py  engine.py  engine_vmap.py  eos.py  eos_interfaces.py  example_google.py  ideality.py  initial_condition.py  initial_solution.py  interfaces.py  interior_atmosphere.py  jax_containers.py  jax_engine.py  jax_mappings.py  jax_output.py  jax_utilities.py  learning.py  logging.conf  myjax.py  mytypes.py  output.py  plot.py  reaction.py  reaction_network.py  reaction_network_jax.py  run.py  solubilities.py  solubility.py  solution.py  solver.py  solvers.py  thermodynamics.py  (+3 more)
atmodeller/activity/: __init__.py  interfaces.py
atmodeller/archive/: README.md  core_old_fittingtoK.py  gibbs_linear.csv  ideality_meng.py  test_gibbs_linear.py  thermodynamics_old_fittingtoK.py
atmodeller/data/: Mindata161127.csv  README.md  gibbs_linear.csv
atmodeller/docs/: 1_basics.ipynb  2_planet.ipynb  3_monte_carlo.ipynb  4_silicon.ipynb  (+10 more)
docs/: Links.rst  Tutorial.rst  about.rst  common_tasks.rst  conf.py  development.rst  examples.rst  index.rst  installation.rst  output.rst  refs.bib  requirements.txt  setup.rst  troubleshooting.rst  tutorial.rst
notebooks/: 1_basics.ipynb  2_planet.ipynb  3_monte_carlo.ipynb  5_silicon.ipynb  SiOH_nosolubility_ideal_3000K_800ocean.csv  bower_2024_trappist.ipynb  bower_2024_trappist_data_gen.ipynb  bower_2024_trappist_plot.ipynb  bower_et_al_2024.ipynb  examples.ipynb  fugacity_crisis.ipynb  hakim_et_al_2024.ipynb  k2-18b.ipynb  read_atmodeller_pickle.ipynb  silicon.ipynb  sub-neptune.ipynb  sub_neptune_ideal_withsol_varyCtoH.pkl  sub_neptune_ideal_withsol_varyCtoH.xlsx  sub_neptune_ideal_withsol_varyHF.pkl  sub_neptune_ideal_withsol_varyHF.xlsx  sub_neptune_ideal_withsol_varyMp.pkl  sub_neptune_ideal_withsol_varyMp.xlsx  sub_neptune_ideal_withsol_varyRsurf.pkl  sub_neptune_ideal_withsol_varyRsurf.xlsx  sub_neptune_ideal_withsol_varyfO2.pkl  sub_neptune_ideal_withsol_varyfO2.xlsx  sub_neptune_real_withsol_varyCtoH.pkl  sub_neptune_real_withsol_varyCtoH.xlsx  sub_neptune_real_withsol_varyHF.pkl  sub_neptune_real_withsol_varyHF.xlsx  sub_neptune_real_withsol_varyMp.pkl  sub_neptune_real_withsol_varyMp.xlsx  sub_neptune_real_withsol_varyRsurf.pkl  sub_neptune_real_withsol_varyRsurf.xlsx  sub_neptune_real_withsol_varyfO2.pkl  sub_neptune_real_withsol_varyfO2.xlsx  trappist.ipynb  ~$sub_neptune_real_withsol_varyHF.xlsx
scripts/: CHO_low_temperature.py  jax_CHO_low_temperature.py  jax_solver.py
tests/: conftest.py  test_CHO.py  test_CHO_ideal.py  test_CHO_nonideal.py  test_CHO_systems.py  test_HO.py  test_benchmark.py  test_condensates.py  test_condensed.py  test_core.py  test_factsage_compare.py  test_general.py  test_gibbs.py  test_gibbs_holland.py  test_gibbs_janaf.py  test_gibbs_linear.py  test_gibbs_non_ideal.py  test_ideality.py  test_initial_condition.py  test_initial_solution.py  test_integration.py  test_jax.py  test_new_jax.py  test_output.py  test_real_gas.py  test_real_gases.py  test_silane.py  test_silicon_nonideal.py  test_solution.py  test_sulfur.py  test_tian_heng.py
(+151 files in other folders)
