[tool.poetry]
name = "atmodeller"
version = "0.1.0"
description = "Volatile partitioning between a rocky interior and atmosphere"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
thermochem = { git = "https://github.com/ExPlanetology/thermochem.git" }
openpyxl = "^3.1.2"
molmass = "^2024.5.24"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.0"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
cmcrameri = "^1.7"
typing-extensions = "^4.12.2"
jax = "^0.4.31"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"
sphinxcontrib-bibtex = "^2.6.2"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"