[tool.poetry]
name = "atmodeller"
version = "0.1.0"
description = "Volatile partitioning between a rocky interior and atmosphere"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
molmass = "^2024.10.25"
ipykernel = "^6.29.0"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
typing-extensions = "^4.12.2"
optax = "^0.2.3"
xmmutablemap = "^0.1"
optimistix = "^0.0.8"
jax = "0.4.33"
equinox = "0.11.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"
sphinxcontrib-bibtex = "^2.6.2"
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"