[tool.poetry]
name = "atmodeller"
version = "0.5.0"
description = "Volatile partitioning between a rocky interior and atmosphere"
authors = ["Dan J Bower <djbower@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
numpy = "^1.26.4"
pandas = "^2.2.3"
openpyxl = "^3.1.2"
molmass = "^2025.4.14"
ipykernel = "^6.29.0"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
typing-extensions = "^4.12.2"
optax = "^0.2.4"
xmmutablemap = "^0.1"
optimistix = "0.0.10"
jax = "0.5.3"
equinox = "0.12.1"
sphinx-rtd-theme = {version = "^3.0.2", optional = true}
sphinx = {version = "^8.1.3", optional = true}
sphinxcontrib-bibtex = {version = "^2.6.3", optional = true}
setuptools = {version = "^75.6.0", optional = true}
doc8 = {version = "^1.1.2", optional = true}
nbsphinx = {version = "^0.9.5", optional = true}
pypandoc = {version = "^1.14", optional = true}
nbsphinx-link = {version = "^1.3.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
pytest-cov = "^6.0.0"

[tool.poetry.extras]
docs = [
    "sphinx-rtd-theme",
    "sphinx",
    "sphinxcontrib-bibtex",
    "setuptools",
    "doc8",
    "nbsphinx",
    "pypandoc",
    "nbsphinx-link"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"